--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-    
-    <div class="row red static">
+
+    <div class="row red fixed">
         <a href="#" class="link toggle"><i class="material-icons">menu</i></a>
         <div class="row left auto brand">
             <a href="#" class="link">Non Theme</a>
