--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     </div>
 
     <div class="content">
-        <p>Lorem ipsum dolor sit amet consectetur 
-        adipisicing elit. Sint vel minima distinctio
-        cum a quae obcaecati! Consequatur dolorum 
-        facilis mollitia ipsam? Molestiae, sapiente! 
-        Voluptatibus, delectus dignissimos. Error vitae 
-        omnis maxime.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Ducimus dolorum adipisci eum aut quam, deserunt, fuga 
+        quaerat explicabo laboriosam dicta perferendis quisquam 
+        ullam blanditiis, nisi ut. Excepturi consequuntur voluptate ab!</p>
+
     </div>
 
     <script src="main.js"></script>
