--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <title>Non Theme</title>
     <link rel="stylesheet" type="text/css" href="main.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
 
     <div class="row red fixed">
-        <a href="#" class="link toggle"><i class="material-icons">menu</i></a>
+        <a href="#" class="link toggle">|||</a>
         <div class="row left auto brand">
             <a href="#" class="link">Non Theme</a>
         </div>
@@ -23,14 +22,29 @@
     </div>
 
     <div class="content">
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Ducimus dolorum adipisci eum aut quam, deserunt, fuga 
-        quaerat explicabo laboriosam dicta perferendis quisquam 
-        ullam blanditiis, nisi ut. Excepturi consequuntur voluptate ab!</p>
+        
+        <div class="fluid pd-10">
+            <div class="card auto">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Ducimus dolorum adipisci eum aut quam, deserunt, fuga 
+                quaerat explicabo laboriosam dicta perferendis quisquam 
+                ullam blanditiis, nisi ut. Excepturi consequuntur voluptate ab!</p>
+            </div>
+            <div class="card auto">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Ducimus dolorum adipisci eum aut quam, deserunt, fuga 
+                quaerat explicabo laboriosam dicta perferendis quisquam 
+                ullam blanditiis, nisi ut. Excepturi consequuntur voluptate ab!</p>
+            </div>
+            <div class="card auto">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Ducimus dolorum adipisci eum aut quam, deserunt, fuga 
+                quaerat explicabo laboriosam dicta perferendis quisquam 
+                ullam blanditiis, nisi ut. Excepturi consequuntur voluptate ab!</p>
+            </div>
+        </div>
 
     </div>
 
-    <script src="main.js"></script>
 </body>
 </html>
